# GLM-Free-API

./: Captcha_Report.md  README.md  VMachine_Hash_report.md  arg_gen.js  arg_gen.py  captcha.go  captcha_param_gen.py  config.js  disasm.py  image-gen.js  init.go  main.go  main.js  signature_gen.py  test.go  test.js
.assets/reports/: Fielin-report.md  VM_hash_gen_report.md  aliyun-captcha-report.md
.assets/resources/: F_bytecode.txt  feilin087.5a04960823b08b091639f12277086e009b548b458ac029b57336f5de75bc2f96.js  pe.059.f123b6c8830e46be.js  tr-function.txt  z-ai-api.txt
.assets/scripts/: agent-chat-test.js  arg_gen.js  captcha-debug-utility.js  captcha_param_gen.py  generate_device_data.py  generate_hash.js  verify_req_sender.py  zai_client.py
.assets/scripts/vm_hash_decompile_scripts/: analyze.py  decode_strings.py  disasm_y_func.py  h_calculator.py  hash_alg_finder.py  key_strings_decode.py  y_function_trace.py
.assets/token-helper-js/: package.json
captcha-farmer/: browser.js  package.json
captcha-gen/: CMakeLists.txt  main.cpp
captcha-gen/core/: CMakeLists.txt  main.cpp
captcha-gen/src/: main.cpp
image-gen/: README_IMAGE_GEN.md
reports/: Fielin-report.md  aliyun-captcha-report.md
resources/: L_bytecode.txt
scripts/: utility-for-debug-captcha.js
scripts/vm_hash_decompile_scripts/: extract_strings.py
src/: F.json.txt  F_bytecode.txt  analyze_result.txt  decode_h.py  disasm.txt  full_decode.py  key_strings_decode2.py  log.txt  login_patch.py.txt  pe.059.f123b6c8830e46be.txt  z-ai-api.txt
token-helper/: go.mod  index.js  main.go
